--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "redux": "^4.0.5"
   },
   "scripts": {
+    "server": "json-server --watch db.json -p 3004",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
     "start": "BROWSER=NONE react-scripts start",
@@ -39,6 +40,7 @@
     ]
   },
   "devDependencies": {
-    "gh-pages": "^2.2.0"
+    "gh-pages": "^2.2.0",
+    "json-server": "^0.16.1"
   }
 }
