--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.19.2",
+    "faker": "^4.1.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.0",
@@ -16,7 +17,7 @@
     "redux": "^4.0.5"
   },
   "scripts": {
-    "server": "json-server --watch db.json -p 3004",
+    "server": "json-server db/index.js -p 3004",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
     "start": "BROWSER=NONE react-scripts start",
