--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.19.2",
+    "concurrently": "^5.3.0",
     "faker": "^4.1.0",
     "formik": "^2.1.5",
     "react": "^16.13.1",
@@ -22,10 +23,11 @@
     "yup": "^0.29.1"
   },
   "scripts": {
+		"start": "concurrently \"yarn server\" \"yarn app\"",
+    "app": "BROWSER=NONE react-scripts start",
     "server": "json-server db/index.js -p 3004",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
-    "start": "BROWSER=NONE react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
